--- a/assets/scss/layouts/_contact-form.scss
+++ b/assets/scss/layouts/_contact-form.scss
@@ -36,7 +36,7 @@
   text-transform: uppercase;
   line-height: 1;
   color: $charcoal;
-  margin: 0 0 1.25rem;
+  margin: 0 0 1.5rem;
   white-space: nowrap;
 }
 
